manifests/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace
  labels:
    appName: "testApp"
    env: "test"
    manifestVersion: "0.0.1"
