manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: test-namespace
  labels:
    appName: "testApp"
    env: "test"
    manifestVersion: "0.0.1"
spec:
  type: ClusterIP
  selector:
    appName: "testApp"
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app
  namespace: test-namespace
  labels:
    appName: "testApp"
    env: "test"
    manifestVersion: "0.0.1"
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: test-app.com
      http:
        paths:
          - path: /helloWorld
            pathType: Prefix
            backend:
              service:
                name: test-app
                port:
                  number: 80
